syntax = "proto3";

message EventMessage {
    string event_type = 1;
    bytes  data = 2;
    int64 timestamp = 3;
    string source = 4;
}